selfhost/test/parser/bindingdecl_error_no_ident.out
Error at %FILE_NAME%:1:2
Unexpected end of file:
  |  var
      ^